@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 25-03-2006 changed: CFileCURL files will now write in smaller chunks and have less chance of overwriting buffer, also Stat/Exist should now work for http urls. (no knowledge about dir thou)
  - 25-03-2006 fixed: Nonexistent thumbs and overlays would be searched for every frame.
  - 25-03-2006 fixed: bug in mplayer subtitle selection (more of a workaround).
  - 24-03-2006 fixed: Optimized xbmcGetCurrentlyPlaying() a bit, and changed sleep in xbmcCommand() from 100 to 10ms.
